# News-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: news_agent.py
api/: routes.py
calibration/: corroboration.py  freshness.py  news_trust_score.py
configs/: default.yaml  loader.py  source_credibility.yaml
connectors/: base.py  factory.py  gdelt.py  gdelt_normalizer.py  http_utils.py  newsapi.py  newsapi_normalizer.py  normalizer_registry.py  rss.py  rss_normalizer.py
docs/: implementation.md
features/: build_features.py  story_cluster.py
features/nlp/: credibility.py  dedup.py  entities.py  sentiment.py
pipelines/: ingest_job.py  realtime_job.py
schemas/: api_models.py  article.py  enums.py  signals.py
services/: __init__.py  persisted_story_clusters.py  story_clusters.py
storage/: persisted_signals.py  persisted_stories.py  readers.py  sqlite_index.py  story_clusters.py  writers.py
tests/: conftest.py  test_integration.py
tests/agents/: test_contract_compliance.py  test_news_agent.py  test_story_aggregation.py
tests/api/: test_routes.py
tests/calibration/: test_corroboration.py  test_freshness.py  test_news_trust_score.py
tests/connectors/: test_gdelt.py  test_newsapi.py  test_newsapi_normalizer.py  test_normalizer_registry.py  test_rss.py
tests/features/: test_credibility.py  test_dedup.py  test_entities.py  test_sentiment.py  test_story_cluster.py
tests/pipelines/: test_ingest_job.py  test_realtime_job.py
tests/schemas/: test_api_models.py  test_article.py  test_enums.py  test_signals.py
utils/: datetime_helpers.py
(+9 files in other folders)
