[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "news-agent"
version = "0.1.0"
description = "News intelligence agent for TollamaAI trust pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "pydantic>=2.7,<3",
  "pandas>=2.1,<2.3",
  "numpy>=1.26,<2",
  "httpx>=0.27,<0.28",
  "pyyaml>=6,<7",
  "feedparser>=6.0,<7",
  "vaderSentiment>=3.3,<4",
  "datasketch>=1.6,<2",
]

[project.optional-dependencies]
server = [
  "uvicorn[standard]>=0.30,<0.31",
]
test = [
  "pytest>=8.1,<9",
  "pytest-asyncio>=0.23,<1",
]
dev = [
  "pytest>=8.1,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "agents*",
  "api*",
  "calibration*",
  "connectors*",
  "features*",
  "pipelines*",
  "schemas*",
  "storage*",
]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
